--- a/package.json
+++ b/package.json
@@ -23,18 +23,23 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@hongbusi/eslint-config": "^0.3.4",
+    "@types/diacritics": "^1.3.1",
     "@types/fs-extra": "^9.0.13",
     "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^18.7.18",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "critters": "^0.0.16",
+    "diacritics": "^1.3.0",
     "eslint": "^8.23.1",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.5",
+    "markdown-it-link-attributes": "^4.0.1",
     "typescript": "^4.8.3",
     "unocss": "^0.45.22",
     "unplugin-auto-import": "^0.11.2",
