--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.3",
     "vite-plugin-pages": "^0.26.0",
+    "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-ssg": "^0.20.2",
     "vue-tsc": "^0.40.13"
