--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hongbusi/icons-vue": "^0.0.5",
+    "@hongbusi/markdown-css": "^0.0.2",
     "@unocss/reset": "^0.45.22",
     "@vueuse/core": "^9.1.0",
     "@vueuse/head": "^0.7.12",
