--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@hongbusi/icons-vue": "^0.0.5",
+    "@hongbusi/icons-svg": "^0.0.5",
     "@hongbusi/markdown-css": "^0.0.3",
     "@unocss/reset": "^0.45.22",
     "@vueuse/core": "^9.1.0",
@@ -24,6 +24,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@hongbusi/eslint-config": "^0.3.4",
+    "@iconify/utils": "^2.0.1",
     "@types/diacritics": "^1.3.1",
     "@types/fs-extra": "^9.0.13",
     "@types/markdown-it": "^12.2.3",
